# llm-proxy

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  api_configuration.yml  application_default_credentials.json  cohere.py  cost-vs-gpt.csv  cost-vs-gpt.py  llmproxy.config.yml  main.py  makefile  pyproject.toml  test.py  test.txt  test_category.py  test_chat_history.py  test_cost.py  test_elo.py  test_local.py  test_proficiency.py  testing.bash  visualize-cost-vs-gpt.ipynb  vs-gpt.py
.github/workflows/: integration-tests.yml  lint.yml  release.yml  secrets.yml  tests.yml  unit-tests.yml  unused-imports.yml
benchmarks/: .deepeval  pyproject.toml  temp_test_run_data.json  test_chatbot.py
data_scrapper/: dataScrapper.py  leaderboard.json
llmproxy/: __init__.py  api_configuration.yml  cli.py  llmproxy.py
llmproxy/config/: internal.config.yml  internal_config.py
llmproxy/data/: tokenizer-wiki.json
llmproxy/data/classification/: config.json
llmproxy/models/: base.py  cohere.py  cohereai.py  llama2.py  mistral.py  openai.py  vertexai.py
llmproxy/provider/: base.py
llmproxy/provider/cohere/: cohere.py
llmproxy/provider/google/: vertexai.py
llmproxy/provider/huggingface/: llama2.py  mistral.py
llmproxy/provider/openai/: chatgpt.py
llmproxy/routing/: best_category.py  best_fit.py  classification.py  classification_extra_code.py  classification_one.py  classification_two.py  cost.py  mistral_cost.py  open_ai_cost.py  prompt_data_set.csv  prompts.yml  test_classification.py  train_BPE.py
llmproxy/tests/unit_tests/config_yml/: empty_model_test.yml  test_llmproxy.py
llmproxy/tests/unit_tests/llmproxy_client/: empty_model_test.yml  get_setting_test.yml  test.yml  (+4 more)
llmproxy/training/: test.csv  train.csv  train_BPE.py  train_category_model.py
llmproxy/utils/: categorization.py  category_model.py  category_model_2.0.py  enums.py  log.py  logger.py  sorting.py  timeout.py  tokenizer.py
llmproxy/utils/exceptions/: llmproxy_client.py  provider.py
prototype/: .env  test.py
proxyllm/: __init__.py  cli.py  proxyllm.py
proxyllm/config/: internal_config.py
proxyllm/provider/: base.py
proxyllm/provider/anthropic/: claude.py
proxyllm/provider/cohere/: cohere.py
proxyllm/provider/google/: vertexai.py
proxyllm/provider/huggingface/: llama2.py  mistral.py
proxyllm/provider/mistral/: mistral.py
proxyllm/provider/openai/: chatgpt.py
proxyllm/utils/: categorization.py  cost.py  enums.py  logger.py  proxy_logger.py  sorting.py  timeout_function.py  tokenizer.py
proxyllm/utils/exceptions/: llmproxy_client.py  provider.py
src/: llmproxy.py
src/llm_proxy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: Llama2.py  base.py  cohere.py  gpt4all.py  llama2.py  mistral.py  openai.py  vertex_ai.py  vertexai.py
tests/unit_tests/models/: test_anthropic.py  test_cohere.py  test_llama2.py  test_mistral.py  test_openai.py  test_vertexai.py
tests/unit_tests/proxyllm/: empty_model_test.yml  invalid_model_test.yml  test.yml  test_llmproxy_initialization.py  test_llmproxy_setup.py
tests/unit_tests/utils/: test_categorization.py  test_cost_util.py  test_sorting.py  test_timeout.py  test_tokenizer.py
training/: train_BPE.py
(+15 files in other folders)
