[tool.poetry]
name = "benchmarks"
version = "0.1.0"
description = ""
authors = ["laxitshahi <shahilax@my.yorku.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
deepeval = "^0.20.85"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
